--- a/.nf-core.yml
+++ b/.nf-core.yml
@@ -7,6 +7,7 @@ lint:
   - .github/ISSUE_TEMPLATE/config.yml
   - .github/workflows/awstest.yml
   - .github/workflows/awsfulltest.yml
+  - lib/nfcore_external_java_deps.jar
   files_unchanged:
   - CODE_OF_CONDUCT.md
   - assets/nf-core-postprocessing_logo_light.png
