--- a/.nf-core.yml
+++ b/.nf-core.yml
@@ -7,6 +7,7 @@ lint:
   - .github/ISSUE_TEMPLATE/config.yml
   - .github/workflows/awstest.yml
   - .github/workflows/awsfulltest.yml
+  - .github/workflows/linting_comment.yml
   - .github/.dockstore.yml
   - .editorconfig
   - .prettierignore
