--- a/.nf-core.yml
+++ b/.nf-core.yml
@@ -5,6 +5,7 @@ lint:
   - docs/images/nf-core-postprocessing_logo_light.png
   - docs/images/nf-core-postprocessing_logo_dark.png
   - .github/ISSUE_TEMPLATE/config.yml
+  - .github/workflows/branch.yml
   - .github/workflows/awstest.yml
   - .github/workflows/awsfulltest.yml
   - .github/workflows/linting_comment.yml
