Refactor: Comment changes for clarification and cleanup Fix: Lint fixes

--- a/.nf-core.yml
+++ b/.nf-core.yml
@@ -27,6 +27,7 @@ lint:
   - .github/CONTRIBUTING.md
   - .github/PULL_REQUEST_TEMPLATE.md
   - .github/workflows/linting_comment.yml
+  - LICENSE
   multiqc_config:
   - report_comment
   nextflow_config:
