--- a/.nf-core.yml
+++ b/.nf-core.yml
@@ -30,8 +30,7 @@ lint:
   - .github/workflows/linting_comment.yml
   - .github/workflows/linting.yml
   - LICENSE
-  multiqc_config:
-  - report_comment
+  multiqc_config: False
   nextflow_config:
   - manifest.name
   - manifest.homePage
