--- a/.nf-core.yml
+++ b/.nf-core.yml
@@ -1,4 +1,5 @@
 lint:
+  actions_ci: False
   files_exist:
   - CODE_OF_CONDUCT.md
   - assets/nf-core-postprocessing_logo_light.png
@@ -26,6 +27,7 @@ lint:
   - .github/ISSUE_TEMPLATE/bug_report.yml
   - .github/CONTRIBUTING.md
   - .github/PULL_REQUEST_TEMPLATE.md
+  - .github/workflows/linting.yml
   - .github/workflows/linting_comment.yml
   - LICENSE
   multiqc_config:
