--- a/.nf-core.yml
+++ b/.nf-core.yml
@@ -1,4 +1,5 @@
 lint:
+  actions_ci: False
   files_exist:
   - CODE_OF_CONDUCT.md
   - assets/nf-core-postprocessing_logo_light.png
@@ -27,6 +28,7 @@ lint:
   - .github/CONTRIBUTING.md
   - .github/PULL_REQUEST_TEMPLATE.md
   - .github/workflows/linting_comment.yml
+  - .github/workflows/linting.yml
   - LICENSE
   multiqc_config:
   - report_comment
