--- a/.nf-core.yml
+++ b/.nf-core.yml
@@ -24,6 +24,7 @@ lint:
   - assets/nf-core-postprocessing_logo_light.png
   - docs/images/nf-core-postprocessing_logo_light.png
   - docs/images/nf-core-postprocessing_logo_dark.png
+  - docs/README.md
   - .github/ISSUE_TEMPLATE/bug_report.yml
   - .github/CONTRIBUTING.md
   - .github/PULL_REQUEST_TEMPLATE.md
@@ -34,6 +35,9 @@ lint:
   nextflow_config:
   - manifest.name
   - manifest.homePage
+  - config_defaults:
+    - params.exomiser_analysis_wes
+    - params.exomiser_analysis_wgs
 nf_core_version: 2.14.1
 repository_type: pipeline
 template:
